--- a/client/src/index.css
+++ b/client/src/index.css
@@ -128,3 +128,42 @@ form.signup, form.login {
   border-radius: 4px;
 }
 
+
+.WebcamCapture {
+  min-height: 100vh;
+  position: relative;
+  background-color: gold;
+}
+
+.camera {
+  position: relative;
+}
+
+.result {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  background-color: black;
+  transition: 0.4s;
+
+
+}
+
+.result.hasPhoto {
+  left: 0;
+}
+
+video {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+
+}
+
+
+
+
