--- a/client/src/index.css
+++ b/client/src/index.css
@@ -130,7 +130,7 @@ form.signup, form.login {
 
 
 .WebcamCapture {
-  min-height: 100vh;
+  min-height: 100px;
   position: relative;
   background-color: gold;
 }
@@ -162,6 +162,35 @@ video {
   max-width: 100%;
   height: auto;
 
+}
+
+button1 {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+
+  appearance: none;
+  border: none;
+  outline: none;
+
+  padding: 8px 16px;
+  background-image: linear-gradient(to right, #844FFF 50%, #FF4F84 50%);
+  background-position: 0%;
+  background-size: 200%;
+  color: #FFF;
+  font-size: 24px;
+  font-weight: 700;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+button:hover {
+  background-position: 100%;
+}
+
+canvas {
+  width: 100%;
+  height: auto;
 }
 
 
