--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -51,6 +51,8 @@
       align-items: center;
       margin-right: 15px;
       cursor: pointer;
+      
+
   }
   
   .shareIcon{
@@ -61,13 +63,14 @@
   .shareOptionText{
       font-size: 14px;
       font-weight: 500;
+      
   }
   
   .shareButton{
       border: none;
       padding: 7px;
       border-radius: 5px;
-      background-color: blue;
+      background-color: green;
       font-weight: 500;
       margin-right: 20px;
       cursor: pointer;
@@ -90,4 +93,16 @@
     right: 20px;
     cursor: pointer;
     opacity: 0.7;
+  }
+
+  .snap{
+    background-color: blue;
+  }
+
+  .flags{
+    background-color: tomato;
+  }
+
+  .location{
+    background-color: goldenrod;
   }
