update share buttons

--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -91,3 +91,18 @@
     cursor: pointer;
     opacity: 0.7;
   }
+
+  .imageOptionText{
+    background-color: green;
+    color: white;
+  }
+
+  .messageOptionText{
+    background-color: red;
+    color: white;
+  }
+
+  .locationOptionText{
+    background-color: goldenrod;
+    color: white;
+  }
